# MeowCat

./: .gitignore  CLAUDE.md  README.md  normalize_masks.py  pyproject.toml  rapids_singlecell_env.yml
.claude/: settings.json
.claude/commands/: meowcat-check.md  meowcat-setup.md
agent_helpers/: config_scaffold_prompt.md
config/: benchmark_lung_cmap.json  cell_type_mapping_lung.json  cell_type_mapping_lung_refined.json  default.yaml  visualization_cmap.json
docs/: ai_tools.rst  api.rst  cli.rst  conf.py  config.rst  examples.rst  index.rst  install.rst  pipeline.rst  references.rst  requirements.txt
docs/tutorials/: 01_visium_only.rst  02_xenium_only.rst  03_visium_xenium_single.rst  04_multi_visium.rst  04_multi_xenium.rst  05_multi_visium_xenium.rst  06_predict_new_sample.rst
env/: MeowCat_env.yml  RCTD_env.yml  he_anno_minimal.yml  he_anno_requirements.txt
examples/: README.md
examples/00_intermediate_training/: log_intermediate.txt  run.sh
examples/01_visium_only/: .nfs000000022afaf89a0001eb76  config.yaml  run.sh
examples/01_visium_only_P15/: .nfs00000004a482e8b50001feec  03032026_retrain_P15.txt  03032026_run_P15.txt  config.yaml  run.sh  setup_links.sh
examples/02_xenium_only/: config.yaml  run.sh
examples/03_visium_xenium_single/: 03042026_ex03_run.txt  03042026_ex03_run2.txt  03042026_ex03_run3.txt  config.yaml  data_preparing.sh  run.sh
examples/04_multi_visium/: run.sh  (+5 more)
figures/: architecture_diagram.html  loss_functions.tex  subsampling.tex
meowcat/: __init__.py  cli.py  config.py  function.md  pipeline.py
tests/: test_config.py
(+86 files in other folders)
